--- a/www/custom_styles.css
+++ b/www/custom_styles.css
@@ -2,7 +2,7 @@
 width: 28rem;
 }
 .selectize-input {
-width: 50rem;
+width: 61rem;
 }
 
 .info-box-content {
@@ -10,8 +10,9 @@ padding-top: 0rem;
 padding-bottom: 0rem;
 }
 
-.box-body {
-margin-left: 0px;
+.box {
+margin-right: 0px;
+background-color: blue;
 }
 
 ul {
